--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+eht-imaging (1.1.1-1kern1) bionic; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * New upstream version 1.1.1
+
+ -- KERN packaging <packaging@kernsuite.info>  Mon, 13 Jan 2020 12:32:55 +0200
+
 eht-imaging (0.1.2-1kern1) bionic; urgency=medium
 
   * Initial release
