Updates:- New upstream release - Drop py2 support - Build for focal

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+eht-imaging (1.2.2-1kern1) focal; urgency=medium
+
+  [ Athanaseus Javas Ramaila ]
+  * New upstream version 1.2.2
+  * Drop python2 support
+  * Build for focal
+
+ -- KERN packaging <packaging@kernsuite.info>  Fri, 12 Feb 2021 14:15:35 +0000
+
 eht-imaging (0.1.2-1kern1) bionic; urgency=medium
 
   * Initial release
